<?xml version="1.0"?>
<package format="2">
  <name>local_avoidance</name>
  <version>0.0.1</version>
  <description>LiDAR potential-field local avoidance (3D / Livox)</description>
  <maintainer email="rhanehdfurrl@gmail.com">ml</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
</package>
